--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@material-ui/core": "^4.11.0",
     "@zeit/next-css": "^1.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-cache-inmemory": "^1.6.3",
     "apollo-link": "^1.2.13",
     "apollo-link-http": "^1.5.15",
+    "enzyme-to-json": "^3.6.1",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
@@ -48,6 +50,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
     "jsdom": "^16.4.0",
+    "jsdom-global": "^3.0.2",
     "react-test-renderer": "^16.13.1"
   }
 }
